# blog

./: .ignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  logging.go  main.go  posts.go  sitemap.xml
posts/: 2019-01-01.toml  2019-01-02.toml  decision_making_for_healthy_teams.toml  go_error_wrapping.md  halle_leipzig.toml  healthy_teams.md  how_to_prevent_rsi.md  how_to_prevent_rsi.toml  introducing_wrapcheck.md  introducing_wrapcheck_linter_for_go.toml  plane_on_a_treadmill.toml  rust_and_leds.md  rust_and_leds.toml  stop_future_coding.md  test.toml  traefik_v2_2_on_kubernetes.toml  traefik_v2_on_kubernetes.toml
public/: main.css  skeleton.css
public/fonts/: stylesheet.css
src/: main.rs  models.rs  parser.rs  templates.rs  utils.rs
templates/: 404.html  404.html.tmpl  base.html  base.html.tmpl  heading.html  heading.html.tmpl  index.html  index.html.tmpl  layout.html  post.html  post.html.tmpl  snippet.html
tests/basic/: test.toml
tests/sort/: test1.toml  test2.toml
v1/: README.md
v1/posts/: halle_leipzig.toml  introducing_wrapcheck_linter_for_go.toml  traefik_v2_on_kubernetes.toml
v1/public/: main.css
v1/public/fonts/: stylesheet.css
v1/src/: main.rs  parser.rs  templates.rs
v1/templates/: 404.html  base.html  heading.html  index.html
v1/tests/sort/: test1.toml
