[package]
name = "blog"
version = "0.1.0"
authors = ["Tom Arrell <tom.arrell@gmail.com>"]
edition = "2018"

[dependencies]
handlebars = "1.1.0"
actix-web = "0.7"

serde = { version = "1.0", features = ["derive"] }
toml = "0.4"

log = "0.4"
pretty_env_logger = "0.3"

chrono = { version = "0.4", features = ["serde"] }

