[package]
name = "blog"
version = "0.1.0"
authors = ["Tom Arrell <tom.arrell@gmail.com>"]
edition = "2018"
[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
log = "0.4"
toml = "0.4"
comrak = "0.7"
actix-web = "0.7"
handlebars = "1.1.0"
pretty_env_logger = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

